--- a/faq.html
+++ b/faq.html
@@ -99,7 +99,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="screening.html" class="btn btn-primary">Get Started</a></li>
+                    <li><a href="screening.html" class="btn btn-primary" style="background: #2C5F7C !important; color: white !important; font-weight: 700 !important; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15) !important;">Get Started</a></li>
                 </ul>
             </div>
         </div>
