Update website to reflect board-certified internist credentials and CBT specialization

--- a/about.html
+++ b/about.html
@@ -243,15 +243,15 @@
         <section class="hero">
             <div class="container">
                 <h1>About MoodPath MD</h1>
-                <p class="subtitle">A modern approach to mental health care that combines medical expertise with personalized treatment plans</p>
+                <p class="subtitle">Board-certified internal medicine physician specializing in mild-moderate depression and CBT</p>
             </div>
         </section>
 
         <section class="approach-section">
             <div class="container">
                 <div class="section-header">
-                    <h2>Why We're Different</h2>
-                    <p>Our internist-led approach to mental health care considers the whole person, examining how physical health, medications, and lifestyle factors impact your mood and anxiety.</p>
+                    <h2>Why I'm Different</h2>
+                    <p>As a board-certified internist with specialized training in mild-moderate depression and CBT, my approach considers the whole person, examining how physical health, medications, and lifestyle factors impact your mood and anxiety.</p>
                 </div>
                 
                 <div class="approach-grid">
@@ -281,8 +281,8 @@
         <section class="values-section">
             <div class="container">
                 <div class="section-header">
-                    <h2>Our Treatment Philosophy</h2>
-                    <p>We believe in evidence-based, personalized care that empowers you to take control of your mental health journey.</p>
+                    <h2>My Treatment Philosophy</h2>
+                    <p>I believe in evidence-based, personalized care that empowers you to take control of your mental health journey through integrated medication management and CBT approaches.</p>
                 </div>
                 
                 <div class="values-grid">
