--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>MoodPath MD - Online Depression & Anxiety Treatment | Board-Certified Psychiatrist</title>
-    <meta name="title" content="MoodPath MD - Online Depression & Anxiety Treatment | Board-Certified Psychiatrist">
-    <meta name="description" content="Get personalized depression and anxiety treatment from a board-certified psychiatrist. Online consultations, genetic testing, and comprehensive care. Take our 2-minute screening to get started.">
+    <title>MoodPath MD - Online Depression Treatment | Board-Certified Internist & CBT Specialist</title>
+    <meta name="title" content="MoodPath MD - Online Depression Treatment | Board-Certified Internist & CBT Specialist">
+    <meta name="description" content="Get personalized mild-moderate depression treatment from a board-certified internist specializing in CBT. Online consultations and comprehensive care. Take our 2-minute screening to get started.">
     <meta name="keywords" content="depression treatment, anxiety treatment, online psychiatrist, telehealth psychiatry, mental health care, antidepressant medication, genetic testing, PHQ-9 screening, CBT therapy, mood disorders">
     <meta name="author" content="MoodPath MD">
     <meta name="robots" content="index, follow">
@@ -79,22 +79,22 @@
         },
         "openingHours": "Mo,Tu,We,Th,Fr 09:00-17:00",
         "priceRange": "$$",
-        "medicalSpecialty": "Psychiatry",
+        "medicalSpecialty": "Internal Medicine",
         "availableService": [
             {
                 "@type": "MedicalService",
-                "name": "Depression Treatment",
-                "description": "Personalized treatment for depression including medication management and genetic testing"
+                "name": "Mild-Moderate Depression Treatment",
+                "description": "Personalized treatment for mild-moderate depression including medication management and CBT techniques"
             },
             {
                 "@type": "MedicalService",
-                "name": "Anxiety Treatment",
-                "description": "Comprehensive anxiety treatment with evidence-based approaches"
+                "name": "CBT-Integrated Care",
+                "description": "Combining medication management with cognitive behavioral therapy approaches"
             },
             {
                 "@type": "MedicalService",
-                "name": "Genetic Testing",
-                "description": "Pharmacogenetic testing to optimize medication selection"
+                "name": "Comprehensive Assessment",
+                "description": "Medical evaluation including thyroid, vitamin levels, and underlying conditions"
             }
         ],
         "hasOfferCatalog": {
@@ -178,6 +178,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="resources.html">Resources</a></li>
+                    <li><a href="phq9-tracker.html">PHQ-9 Tracker</a></li>
                     <li><a href="screening.html" class="btn btn-primary" style="background: #2C5F7C !important; color: white !important; font-weight: 700 !important; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.15) !important;">Get Started</a></li>
                 </ul>
             </div>
@@ -189,8 +190,8 @@
             <div class="hero-content">
                 <h1>You deserve care that truly sees you.</h1>
                 <p class="subtitle">
-                    Thoughtful online support for depression and anxiety that considers your whole health story — 
-                    because sometimes the answer isn't just in your mind.
+                    Board-certified internal medicine physician specializing in mild-moderate depression and CBT. 
+                    Comprehensive care that considers your whole health story — because sometimes the answer isn't just in your mind.
                 </p>
                 <a href="screening.html" class="btn btn-primary">
                     See if this feels right
@@ -207,16 +208,16 @@
             </p>
             <div class="approach-grid">
                 <div class="approach-card">
-                    <h3>Medical Training That Matters</h3>
-                    <p>Your care comes from a medical doctor who understands how your body affects your mood — thyroid, sleep, hormones, medications.</p>
+                    <h3>Board-Certified Internal Medicine</h3>
+                    <p>Your care comes from a board-certified internist who understands how your body affects your mood — thyroid, sleep, hormones, medications, and underlying medical conditions.</p>
                 </div>
                 <div class="approach-card">
-                    <h3>Your DNA Holds Answers</h3>
-                    <p>Why do some people respond beautifully to certain antidepressants while others feel nothing? Your genetic makeup can reveal which medications your body processes best.</p>
+                    <h3>Specialized in Mild-Moderate Depression</h3>
+                    <p>Focused expertise in treating mild to moderate depression with evidence-based approaches, including medication management and CBT techniques.</p>
                 </div>
                 <div class="approach-card">
-                    <h3>Time to Listen</h3>
-                    <p>90-minute consultations allow us to understand your complete story — not just your symptoms, but your life, your health, and your goals.</p>
+                    <h3>CBT-Integrated Care</h3>
+                    <p>Combining medication management with cognitive behavioral therapy techniques to address both the biological and psychological aspects of depression.</p>
                 </div>
             </div>
         </div>
@@ -239,7 +240,7 @@
                 <div class="step-card">
                     <div class="step-number">3</div>
                     <h3>Be Understood</h3>
-                    <p>Your board-certified medical doctor takes time to see your full picture and create a personalized plan.</p>
+                    <p>Your board-certified internist takes time to see your full picture and create a personalized treatment plan combining medication and CBT approaches.</p>
                 </div>
             </div>
         </div>
@@ -292,7 +293,7 @@
             <div class="faq-grid">
                 <div class="faq-item">
                     <h3>Isn't depression usually treated by psychiatrists?</h3>
-                    <p>Mild to moderate depression is most often first evaluated and managed by internists and primary care doctors. That's the standard of care. We expand on this foundation with more time, targeted labs, and genetic testing.</p>
+                    <p>Mild to moderate depression is most often first evaluated and managed by internists and primary care doctors. That's the standard of care. As a board-certified internist with specialized training in depression and CBT, I expand on this foundation with more time, targeted labs, and evidence-based treatment approaches.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Do I need a primary care provider?</h3>
@@ -300,7 +301,7 @@
                 </div>
                 <div class="faq-item">
                     <h3>How is this different from traditional therapy?</h3>
-                    <p>We provide medical treatment for depression and anxiety, including medication management and genetic testing. While therapy focuses on talk therapy, we focus on the medical aspects of mental health care.</p>
+                    <p>I provide comprehensive medical treatment for mild-moderate depression, combining medication management with CBT techniques. This integrated approach addresses both the biological and psychological aspects of depression, offering a more complete treatment solution than medication or therapy alone.</p>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 3rem;">
