Add SEO terms: psychiatrist, board certified, and alternative positioning for search visibility

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MoodPath MD - Online Depression Treatment | Board-Certified Internist & CBT Specialist</title>
     <meta name="title" content="MoodPath MD - Online Depression Treatment | Board-Certified Internist & CBT Specialist">
     <meta name="description" content="Get personalized mild-moderate depression treatment from a board-certified internist specializing in CBT. Online consultations and comprehensive care. Take our 2-minute screening to get started.">
-    <meta name="keywords" content="depression treatment, anxiety treatment, online psychiatrist, telehealth psychiatry, mental health care, antidepressant medication, genetic testing, PHQ-9 screening, CBT therapy, mood disorders">
+    <meta name="keywords" content="depression treatment, anxiety treatment, online psychiatrist, board certified psychiatrist, telehealth psychiatry, mental health care, antidepressant medication, board certified internist, CBT therapy, mood disorders, mild moderate depression, internal medicine depression treatment">
     <meta name="author" content="MoodPath MD">
     <meta name="robots" content="index, follow">
     
@@ -62,7 +62,7 @@
         "@context": "https://schema.org",
         "@type": "MedicalBusiness",
         "name": "MoodPath MD",
-        "description": "Online depression and anxiety treatment from a board-certified psychiatrist. Personalized care with genetic testing and comprehensive mental health support.",
+        "description": "Online mild-moderate depression treatment from a board-certified internist specializing in CBT. Personalized care with comprehensive mental health support. Alternative to psychiatrist for mild-moderate depression.",
         "url": "https://manisahni.github.io/moodpath-md/",
         "logo": "https://manisahni.github.io/moodpath-md/assets/images/moodpath-md-logo.png",
         "image": "https://manisahni.github.io/moodpath-md/assets/images/moodpath-md-og.jpg",
@@ -122,6 +122,23 @@
         "sameAs": [
             "https://www.linkedin.com/company/moodpath-md",
             "https://twitter.com/moodpathmd"
+        ],
+        "additionalProperty": [
+            {
+                "@type": "PropertyValue",
+                "name": "Medical Specialty",
+                "value": "Internal Medicine, Depression Treatment, CBT"
+            },
+            {
+                "@type": "PropertyValue", 
+                "name": "Board Certification",
+                "value": "Board Certified Internist"
+            },
+            {
+                "@type": "PropertyValue",
+                "name": "Treatment Focus",
+                "value": "Mild-Moderate Depression, Alternative to Psychiatrist"
+            }
         ]
     }
     </script>
@@ -209,11 +226,11 @@
             <div class="approach-grid">
                 <div class="approach-card">
                     <h3>Board-Certified Internal Medicine</h3>
-                    <p>Your care comes from a board-certified internist who understands how your body affects your mood — thyroid, sleep, hormones, medications, and underlying medical conditions.</p>
+                    <p>Your care comes from a board-certified internist who understands how your body affects your mood — thyroid, sleep, hormones, medications, and underlying medical conditions. Like a psychiatrist, I'm board-certified and qualified to treat depression.</p>
                 </div>
                 <div class="approach-card">
                     <h3>Specialized in Mild-Moderate Depression</h3>
-                    <p>Focused expertise in treating mild to moderate depression with evidence-based approaches, including medication management and CBT techniques.</p>
+                    <p>Focused expertise in treating mild to moderate depression with evidence-based approaches, including medication management and CBT techniques. While psychiatrists handle severe cases, I specialize in the mild-moderate depression that affects most people.</p>
                 </div>
                 <div class="approach-card">
                     <h3>CBT-Integrated Care</h3>
@@ -240,7 +257,7 @@
                 <div class="step-card">
                     <div class="step-number">3</div>
                     <h3>Be Understood</h3>
-                    <p>Your board-certified internist takes time to see your full picture and create a personalized treatment plan combining medication and CBT approaches.</p>
+                    <p>Your board-certified internist (like a psychiatrist for mild-moderate depression) takes time to see your full picture and create a personalized treatment plan combining medication and CBT approaches.</p>
                 </div>
             </div>
         </div>
@@ -293,7 +310,7 @@
             <div class="faq-grid">
                 <div class="faq-item">
                     <h3>Isn't depression usually treated by psychiatrists?</h3>
-                    <p>Mild to moderate depression is most often first evaluated and managed by internists and primary care doctors. That's the standard of care. As a board-certified internist with specialized training in depression and CBT, I expand on this foundation with more time, targeted labs, and evidence-based treatment approaches.</p>
+                    <p>Mild to moderate depression is most often first evaluated and managed by internists and primary care doctors. That's the standard of care. While psychiatrists typically handle severe cases, board-certified internists like myself are well-qualified to treat mild-moderate depression. As a board-certified internist with specialized training in depression and CBT, I expand on this foundation with more time, targeted labs, and evidence-based treatment approaches.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Do I need a primary care provider?</h3>
@@ -301,7 +318,12 @@
                 </div>
                 <div class="faq-item">
                     <h3>How is this different from traditional therapy?</h3>
-                    <p>I provide comprehensive medical treatment for mild-moderate depression, combining medication management with CBT techniques. This integrated approach addresses both the biological and psychological aspects of depression, offering a more complete treatment solution than medication or therapy alone.</p>
+                    <p>I provide comprehensive medical treatment for mild-moderate depression, combining medication management with CBT techniques. This integrated approach addresses both the biological and psychological aspects of depression, offering a more complete treatment solution than medication or therapy alone. While psychiatrists and therapists focus on specific aspects, I provide board-certified medical care with integrated CBT approaches.</p>
+                </div>
+                
+                <div class="faq-item">
+                    <h3>Should I see a psychiatrist or an internist for depression?</h3>
+                    <p>For mild to moderate depression, board-certified internists are often the first choice and standard of care. Psychiatrists typically handle severe cases, complex medication regimens, or treatment-resistant depression. As a board-certified internist with specialized training in depression and CBT, I'm well-qualified to treat mild-moderate depression and can refer to psychiatrists if needed for more complex cases.</p>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 3rem;">
