Update to reflect strong interest in CBT rather than specialization/certification

--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
         <section class="hero">
             <div class="container">
                 <h1>About MoodPath MD</h1>
-                <p class="subtitle">Board-certified internal medicine physician specializing in mild-moderate depression and CBT</p>
+                <p class="subtitle">Board-certified internal medicine physician with strong interest in mild-moderate depression and CBT</p>
             </div>
         </section>
 
@@ -251,7 +251,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2>Why I'm Different</h2>
-                    <p>As a board-certified internist with specialized training in mild-moderate depression and CBT, my approach considers the whole person, examining how physical health, medications, and lifestyle factors impact your mood and anxiety. While psychiatrists handle severe cases, I provide board-certified medical care for mild-moderate depression.</p>
+                    <p>As a board-certified internist with strong interest in mild-moderate depression and CBT, my approach considers the whole person, examining how physical health, medications, and lifestyle factors impact your mood and anxiety. While psychiatrists handle severe cases, I provide board-certified medical care for mild-moderate depression.</p>
                 </div>
                 
                 <div class="approach-grid">
@@ -282,7 +282,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2>My Treatment Philosophy</h2>
-                    <p>I believe in evidence-based, personalized care that empowers you to take control of your mental health journey through integrated medication management and CBT approaches.</p>
+                    <p>I believe in evidence-based, personalized care that empowers you to take control of your mental health journey through integrated medication management and CBT approaches based on my strong interest in cognitive behavioral therapy.</p>
                 </div>
                 
                 <div class="values-grid">
