--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>MoodPath MD - Online Depression Treatment | Board-Certified Internist & CBT Specialist</title>
     <meta name="title" content="MoodPath MD - Online Depression Treatment | Board-Certified Internist & CBT Specialist">
-    <meta name="description" content="Get personalized mild-moderate depression treatment from a board-certified internist specializing in CBT. Online consultations and comprehensive care. Take our 2-minute screening to get started.">
+    <meta name="description" content="Get personalized mild-moderate depression treatment from a board-certified internist with strong interest in CBT. Online consultations and comprehensive care. Take our 2-minute screening to get started.">
     <meta name="keywords" content="depression treatment, anxiety treatment, online psychiatrist, board certified psychiatrist, telehealth psychiatry, mental health care, antidepressant medication, board certified internist, CBT therapy, mood disorders, mild moderate depression, internal medicine depression treatment">
     <meta name="author" content="MoodPath MD">
     <meta name="robots" content="index, follow">
@@ -62,7 +62,7 @@
         "@context": "https://schema.org",
         "@type": "MedicalBusiness",
         "name": "MoodPath MD",
-        "description": "Online mild-moderate depression treatment from a board-certified internist specializing in CBT. Personalized care with comprehensive mental health support. Alternative to psychiatrist for mild-moderate depression.",
+        "description": "Online mild-moderate depression treatment from a board-certified internist with strong interest in CBT. Personalized care with comprehensive mental health support. Alternative to psychiatrist for mild-moderate depression.",
         "url": "https://manisahni.github.io/moodpath-md/",
         "logo": "https://manisahni.github.io/moodpath-md/assets/images/moodpath-md-logo.png",
         "image": "https://manisahni.github.io/moodpath-md/assets/images/moodpath-md-og.jpg",
@@ -89,7 +89,7 @@
             {
                 "@type": "MedicalService",
                 "name": "CBT-Integrated Care",
-                "description": "Combining medication management with cognitive behavioral therapy approaches"
+                "description": "Combining medication management with cognitive behavioral therapy approaches based on strong interest in CBT"
             },
             {
                 "@type": "MedicalService",
@@ -207,7 +207,7 @@
             <div class="hero-content">
                 <h1>You deserve care that truly sees you.</h1>
                 <p class="subtitle">
-                    Board-certified internal medicine physician specializing in mild-moderate depression and CBT. 
+                    Board-certified internal medicine physician with strong interest in mild-moderate depression and CBT. 
                     Comprehensive care that considers your whole health story — because sometimes the answer isn't just in your mind.
                 </p>
                 <a href="screening.html" class="btn btn-primary">
@@ -229,12 +229,12 @@
                     <p>Your care comes from a board-certified internist who understands how your body affects your mood — thyroid, sleep, hormones, medications, and underlying medical conditions. Like a psychiatrist, I'm board-certified and qualified to treat depression.</p>
                 </div>
                 <div class="approach-card">
-                    <h3>Specialized in Mild-Moderate Depression</h3>
-                    <p>Focused expertise in treating mild to moderate depression with evidence-based approaches, including medication management and CBT techniques. While psychiatrists handle severe cases, I specialize in the mild-moderate depression that affects most people.</p>
+                    <h3>Strong Interest in Mild-Moderate Depression</h3>
+                    <p>Focused expertise in treating mild to moderate depression with evidence-based approaches, including medication management and CBT techniques. While psychiatrists handle severe cases, I have a strong interest in the mild-moderate depression that affects most people.</p>
                 </div>
                 <div class="approach-card">
                     <h3>CBT-Integrated Care</h3>
-                    <p>Combining medication management with cognitive behavioral therapy techniques to address both the biological and psychological aspects of depression.</p>
+                    <p>Combining medication management with cognitive behavioral therapy techniques to address both the biological and psychological aspects of depression. I have a strong interest in CBT and incorporate these evidence-based techniques into treatment.</p>
                 </div>
             </div>
         </div>
@@ -310,7 +310,7 @@
             <div class="faq-grid">
                 <div class="faq-item">
                     <h3>Isn't depression usually treated by psychiatrists?</h3>
-                    <p>Mild to moderate depression is most often first evaluated and managed by internists and primary care doctors. That's the standard of care. While psychiatrists typically handle severe cases, board-certified internists like myself are well-qualified to treat mild-moderate depression. As a board-certified internist with specialized training in depression and CBT, I expand on this foundation with more time, targeted labs, and evidence-based treatment approaches.</p>
+                    <p>Mild to moderate depression is most often first evaluated and managed by internists and primary care doctors. That's the standard of care. While psychiatrists typically handle severe cases, board-certified internists like myself are well-qualified to treat mild-moderate depression. As a board-certified internist with strong interest in depression and CBT, I expand on this foundation with more time, targeted labs, and evidence-based treatment approaches.</p>
                 </div>
                 <div class="faq-item">
                     <h3>Do I need a primary care provider?</h3>
@@ -323,7 +323,7 @@
                 
                 <div class="faq-item">
                     <h3>Should I see a psychiatrist or an internist for depression?</h3>
-                    <p>For mild to moderate depression, board-certified internists are often the first choice and standard of care. Psychiatrists typically handle severe cases, complex medication regimens, or treatment-resistant depression. As a board-certified internist with specialized training in depression and CBT, I'm well-qualified to treat mild-moderate depression and can refer to psychiatrists if needed for more complex cases.</p>
+                    <p>For mild to moderate depression, board-certified internists are often the first choice and standard of care. Psychiatrists typically handle severe cases, complex medication regimens, or treatment-resistant depression. As a board-certified internist with strong interest in depression and CBT, I'm well-qualified to treat mild-moderate depression and can refer to psychiatrists if needed for more complex cases.</p>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 3rem;">
